# fdiff

./: .gitignore  AGENTS.md  Cargo.toml  README.md  go.mod
.github/workflows/: ci.yml
cmd/fdiff/: main.go
data/: README.md
data/folder1/demo/: 01-changed-lines.txt  02-added-removed.txt  03-unicode.txt  04-long-line.txt  06-same.txt  left-only.txt
data/folder1/demo/nested/: guide.md
data/folder1/demo/services/api/: config.toml
data/folder1/demo/services/worker/: config.toml
data/folder1/demo/type-change/: inside.txt
data/folder2/demo/: 01-changed-lines.txt  02-added-removed.txt  03-unicode.txt  04-long-line.txt  05-blank-vs-content.txt  rename-new.txt  right-only.txt  type-change
data/folder2/demo/nested/: guide.md
data/folder2/demo/services/api/: config.toml
data/folder2/demo/services/worker/: config.toml
docs/: HANDOFF.md  REPO_MANIFEST.yaml  agent-harness.md  completed-milestones.md  roadmap.md  status.md  todo-content-diff.md  todo-interactive-tree-navigation.md
pkg/diff/: diff.go
scripts/: check-agent-harness-interface.sh  check-publication-boundary.py  check.sh
src/: content.rs  diff.rs  lib.rs  main.rs  output.rs  tui.rs
