[package]
name = "fdiff"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "A fluid live TUI for folder-level diffs"
repository = "https://github.com/zrma/fdiff"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
similar = "3.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.27"
